--- a/views/admin/pages/about-list.pug
+++ b/views/admin/pages/about-list.pug
@@ -5,17 +5,17 @@ block main
   //- Section 5: Hành động & tìm kiếm
   .section-5
     .inner-wrap
-      .inner-change-status(
-        change-multi 
-        data-api =`/${pathAdmin}/about/change-multi`
-      )
-        .inner-item
-          select
-            option(value="") -- Hành động --
-            option(value="0") Ẩn
-            option(value="1") Hiện
-        .inner-item
-          button Áp dụng
+      //- .inner-change-status(
+      //-   change-multi 
+      //-   data-api =`/${pathAdmin}/about/change-multi`
+      //- )
+      //-   .inner-item
+      //-     select
+      //-       option(value="") -- Hành động --
+      //-       option(value="0") Ẩn
+      //-       option(value="1") Hiện
+      //-   .inner-item
+      //-     button Áp dụng
       .inner-search
         i(class="fa-solid fa-magnifying-glass")
         input(type="text" placeholder="Tìm kiếm" search)
@@ -28,8 +28,6 @@ block main
       table
         thead
           tr
-            th.inner-center
-              input(type="checkbox" class="inner-check" check-all)
             th.inner-center Tiêu đề
             th.inner-center Ảnh 
             th Ngày tạo
@@ -38,8 +36,6 @@ block main
         tbody
             each item in aboutList
                 tr
-                td.inner-center
-                    input(type="checkbox" class="inner-check" check-item=item.id)
                 td.inner-center #{item.title}
                 td.inner-center
                     if item.avatar
