--- a/views/admin/pages/dieu-tra-create.pug
+++ b/views/admin/pages/dieu-tra-create.pug
@@ -40,4 +40,4 @@ block main
         .inner-button.inner-two-col
           button Tạo mới
       .inner-back
-        a(href=`/${pathAdmin}/sauromthong/dieutrasrt/${matinh}/list`) Quay lại danh sách
+        a(href=`/${pathAdmin}/dieutra/${matinh}/list`) Quay lại danh sách
