--- a/views/admin/pages/dieu-tra-edit.pug
+++ b/views/admin/pages/dieu-tra-edit.pug
@@ -61,4 +61,4 @@ block main
 
     //- Back link
     .inner-back
-      a(href=`/${pathAdmin}/sauromthong/dieutrasrt/${matinh}/list`) Quay lại danh sách
+      a(href=`/${pathAdmin}/dieutra/${matinh}/list`) Quay lại danh sách
