--- a/views/admin/pages/map-create.pug
+++ b/views/admin/pages/map-create.pug
@@ -33,4 +33,4 @@ block main
         .inner-button.inner-two-col
           button Tạo mới
       .inner-back
-        a(href=`/${pathAdmin}/sauromthong/mapsrt/${matinh}/list`) Quay lại danh sách
+        a(href=`/${pathAdmin}/map/${matinh}/list`) Quay lại danh sách
