--- a/views/admin/pages/map-edit.pug
+++ b/views/admin/pages/map-edit.pug
@@ -36,4 +36,4 @@ block main
         .inner-button.inner-two-col
           button Cập nhập
       .inner-back
-        a(href=`/${pathAdmin}/sauromthong/mapsrt/${matinh}/list`) Quay lại danh sách
+        a(href=`/${pathAdmin}/map/${matinh}/list`) Quay lại danh sách
