--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -36,15 +36,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/38/list`) 
+              a.menusrt(href=`/${pathAdmin}/sauromthong/dulieusrt/38/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/38/list`)
+              a.menusrt(href=`/${pathAdmin}/map/38/list` )
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/38/list`)
+              a.menusrt(href=`/${pathAdmin}/dieutra/38/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -52,15 +52,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/40/list`) 
+              a.menusrt(href=`/${pathAdmin}/sauromthong/dulieusrt/40/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/40/list`)
+              a.menusrt(href=`/${pathAdmin}/map/40/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/40/list`)
+              a.menusrt(href=`/${pathAdmin}/dieutra/40/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -68,15 +68,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/42/list`) 
+              a.menusrt(href=`/${pathAdmin}/sauromthong/dulieusrt/42/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/42/list`)
+              a.menusrt(href=`/${pathAdmin}/map/42/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/42/list`)
+              a.menusrt(href=`/${pathAdmin}/dieutra/42/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -84,15 +84,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/44/list`) 
+              a.menusrt(href=`/${pathAdmin}/sauromthong/dulieusrt/44/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/44/list`)
+              a.menusrt(href=`/${pathAdmin}/map/44/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/44/list`)
+              a.menusrt(href=`/${pathAdmin}/dieutra/44/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -100,15 +100,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/47/list`) 
+              a.menusrt(href=`/${pathAdmin}/sauromthong/dulieusrt/47/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/47/list`)
+              a.menusrt(href=`/${pathAdmin}/map/47/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/47/list`)
+              a.menusrt(href=`/${pathAdmin}/dieutra/47/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -116,15 +116,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/46/list`) 
+              a.menusrt(href=`/${pathAdmin}/sauromthong/dulieusrt/46/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/46/list`)
+              a.menusrt(href=`/${pathAdmin}/map/46/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/46/list`)
+              a.menusrt(href=`/${pathAdmin}/dieutra/46/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
     //- Dropdown: Sâu hại keo        
@@ -139,15 +139,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/38/list`) 
+              a.menushlk(href=`/${pathAdmin}/sauhailakeo/dulieushlk/38/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/38/list`)
+              a.menushlk(href=`/${pathAdmin}/map/38/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/38/list`)
+              a.menushlk(href=`/${pathAdmin}/dieutra/38/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -155,15 +155,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/40/list`) 
+              a.menushlk(href=`/${pathAdmin}/sauhailakeo/dulieushlk/40/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/40/list`)
+              a.menushlk(href=`/${pathAdmin}/map/40/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/40/list`)
+              a.menushlk(href=`/${pathAdmin}/dieutra/40/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -171,15 +171,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/42/list`) 
+              a.menushlk(href=`/${pathAdmin}/sauhailakeo/dulieushlk/42/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/42/list`)
+              a.menushlk(href=`/${pathAdmin}/map/42/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/42/list`)
+              a.menushlk(href=`/${pathAdmin}/dieutra/42/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -187,15 +187,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/44/list`) 
+              a.menushlk(href=`/${pathAdmin}/sauhailakeo/dulieushlk/44/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/44/list`)
+              a.menushlk(href=`/${pathAdmin}/map/44/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/44/list`)
+              a.menushlk(href=`/${pathAdmin}/dieutra/44/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -203,15 +203,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/47/list`) 
+              a.menushlk(href=`/${pathAdmin}/sauhailakeo/dulieushlk/47/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/47/list`)
+              a.menushlk(href=`/${pathAdmin}/map/47/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/47/list`)
+              a.menushlk(href=`/${pathAdmin}/dieutra/47/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
         li
@@ -219,15 +219,15 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/46/list`) 
+              a.menushlk(href=`/${pathAdmin}/sauhailakeo/dulieushlk/46/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/46/list`)
+              a.menushlk(href=`/${pathAdmin}/map/46/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
-              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/46/list`)
+              a.menushlk(href=`/${pathAdmin}/dieutra/46/list`)
                 i.fa-solid.fa-magnifying-glass
                 | Điều tra
       //- Bệnh hại lá keo
@@ -246,7 +246,7 @@ nav.sider
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/38/list`)
+              a.menu(href=`/${pathAdmin}/map/38/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             //- li 
@@ -262,7 +262,7 @@ nav.sider
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/40/list`)
+              a.menu(href=`/${pathAdmin}/map/40/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             //- li 
@@ -278,7 +278,7 @@ nav.sider
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/42/list`)
+              a.menu(href=`/${pathAdmin}/map/42/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             //- li 
@@ -294,7 +294,7 @@ nav.sider
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/44/list`)
+              a.menu(href=`/${pathAdmin}/map/44/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             //- li 
@@ -310,7 +310,7 @@ nav.sider
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/47/list`)
+              a.menu(href=`/${pathAdmin}/map/47/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             //- li 
@@ -326,7 +326,7 @@ nav.sider
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/46/list`)
+              a.menu(href=`/${pathAdmin}/map/46/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             //- li 
