--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -24,7 +24,7 @@ header.header
         i.fa-solid.fa-bars
       // Logo
       .inner-logo
-        a(href="index.html")
+        a(href="/")
           img(
             alt=logo
             src="/assets/images/logo.png"
