--- a/views/admin/pages/contact-answer.pug
+++ b/views/admin/pages/contact-answer.pug
@@ -22,8 +22,8 @@ block main
           textarea(id="message" name="message" readonly)= contactDetail.message
         .inner-group.inner-two-col
           label(class="inner-label" for="answer") Phản hồi
-          input(type="text" id="answer" name="answer")
+          input(type="text" id="answer" name="answer" value=(contactDetail.answer || ""))
         .inner-button.inner-two-col
-          button Phản hồi
+          button#updateBtn(type="submit" style=contactDetail.status == 1 ? "display:none;" : "") Phản hồi
       .inner-back
         a(href=`/${pathAdmin}/contact/list`) Quay lại danh sách
