--- a/views/admin/pages/contact-list.pug
+++ b/views/admin/pages/contact-list.pug
@@ -9,33 +9,32 @@ block main
       .inner-item.inner-label
         <i class="fa-solid fa-filter"></i> Bộ lọc
       .inner-item
-        select
+        select(filter-status)
           option(value="") Trạng thái
           option(value="0") Chưa xử lý
           option(value="1") Đã trả lời
           option(value="2") Đang xử lý
       .inner-item.inner-date
-        input(type="date")
+        input(type="date" filter-start-date)
         span - 
-        input(type="date")
-      .inner-item.inner-reset
+        input(type="date" filter-end-date)
+      .inner-item.inner-reset(filter-reset)
         <i class="fa-solid fa-rotate-left"></i> Xóa bộ lọc
 
   //- Section 5: Hành động & tìm kiếm
   .section-5
     .inner-wrap
-      .inner-change-status
+      .inner-change-status(
+        change-multi 
+        data-api =`/${pathAdmin}/contact/change-multi`
+      )
         .inner-item
-          select
+          select()
             option(value="") -- Hành động --
-            option(value="1") Đã trả lời
-            option(value="2") Đang xử lý
-            option(value="delete") Xóa
+            option(value="true") Hiện
+            option(value="false") Ẩn
         .inner-item
           button Áp dụng
-      .inner-search
-        i(class="fa-solid fa-magnifying-glass")
-        input(type="text" placeholder="Tìm kiếm")
 
 
   //- Section 6: Bảng danh sách
@@ -45,46 +44,67 @@ block main
         thead
           tr
             th.inner-center
-              input(type="checkbox" class="inner-check")
+              input(type="checkbox" class="inner-check" check-all)
             th Họ tên
             th Email
             th Số điện thoại
-            th Chủ đề
-            th Trạng thái
+            th.inner-center Chủ đề
+            th.inner-center Trạng thái
+            th.inner-center Hiển thị
             th Ngày tạo
             th Hành động
         tbody
-          each contact in contactList
+          if contactList && contactList.length > 0
+            each contact in contactList
+              tr
+                td.inner-center
+                  input(type="checkbox" class="inner-check" check-item = contact.id)
+                td= contact.full_name
+                td= contact.email
+                td= contact.phone || "-"
+                td.inner-center
+                  if contact.topic == "sau-rom-thong"
+                    | Sâu róm Thông
+                  else if contact.topic == "sau-hai-lakeo"
+                    | Sâu hại lá Keo
+                  else if contact.topic == "benh-hai-lakeo"
+                    | Bệnh hại lá Keo
+                  else
+                    | #{contactDetail.topic||"Không xác định"}
+                td.inner-center
+                  if contact.status == 1
+                    .badge.badge-green Đã trả lời
+                  else
+                    .badge.badge-red Chưa xử lý
+                td.inner-center
+                  label.switch
+                    input(
+                      type="checkbox"
+                      checked=(contact.is_public ? true : false)
+                      toggle-public
+                      data-id=contact.id
+                      data-api=`/${pathAdmin}/contact/change-public/${contact.id}`
+                    )
+                    span.slider.round
+                td= contact.createdAtFormat
+                td
+                  .inner-buttons
+                    if (contact.status == 1)
+                      a.inner-edit(href=`/${pathAdmin}/contact/answer/${contact.id}`)
+                        i.fa-regular.fa-eye
+                    if(contact.status == 0)
+                      a.inner-edit(href=`/${pathAdmin}/contact/answer/${contact.id}`)
+                        i.fa-regular.fa-pen-to-square
+          else
             tr
-              td.inner-center
-                input(type="checkbox" class="inner-check")
-              td= contact.full_name
-              td= contact.email
-              td= contact.phone || "-"
-              td
-                if contact.topic == "sau-rom-thong"
-                  | Sâu róm Thông
-                else if contact.topic == "sau-hai-lakeo"
-                  | Sâu hại lá Keo
-                else if contact.topic == "benh-hai-lakeo"
-                  | Bệnh hại lá Keo
-                else
-                  | #{contactDetail.topic||"Không xác định"}
-              td 
-                if contact.status == 1
-                  .badge.badge-green Đã trả lời
-                else if contact.status == 2
-                  .badge.badge-blue Đang xử lý
-                else
-                  .badge.badge-red Chưa xử lý
-              td= contact.createdAtFormat
-              td
-                .inner-buttons
-                  a.inner-edit(href=`/${pathAdmin}/contact/answer/${contact.id}`)
-                    i(class="fa-regular fa-pen-to-square")
-
+              td(colspan="9" class="inner-center") Không có dữ liệu
   //- Section 7: Pagination
   .section-7
-    span.inner-label Hiển thị 1 - 3 của 3
-    select.inner-pagination(name="page")
-      option(value="1" selected) Trang 1
+    - const start = (pagination.page - 1) * limit + 1;
+    - const end = Math.min(pagination.page * limit, pagination.totalRecords);
+    span.inner-label Hiển thị #{start} - #{end} của #{pagination.totalRecords}
+
+    select.inner-pagination(pagination name="page")
+      each val in [...Array(pagination.totalPages).keys()]
+        - const pageNum = val + 1;
+        option(value=pageNum selected=(pageNum === pagination.page)) Trang #{pageNum}
